--- a/Visualization_Mapping_Global_Earthquake_Activity.ipynb
+++ b/Visualization_Mapping_Global_Earthquake_Activity.ipynb
@@ -6,7 +6,7 @@
       "name": "Visualization: Mapping Global Earthquake Activity.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMc2OlgTjZKrJ/PeZVn+HCV",
+      "authorship_tag": "ABX9TyPEdjI+fVFsvEpdYIgUKM+P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This project is an enhacement of the project: http://introtopython.org/visualization_earthquakes.html"
+        "# Visualization: Mapping Global Earthquake Activity"
+      ],
+      "metadata": {
+        "id": "p4ys5vbxLrt6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This project is an improvement of the project that can be found in this link: http://introtopython.org/visualization_earthquakes.html\n",
+        "\n",
+        "The improvement consists on being able to query the data via an API instead of needing to download the data in csv and load it. We can achieve this via the formula \"get_historic_data\" in which we can input as parameters the start date, the end date, and the minimum magnitude of the earthquakes that we want to see in the chart. This function retuns a dataframe with all the data about the earthquakes that later is used in the map.\n",
+        "\n",
+        "The rest of the code is as in the source link.\n",
+        "\n",
+        "Please, feel free to share any feedback!"
       ],
       "metadata": {
         "id": "5QmZU7oSJ-mU"
